Tue Feb  7 16:24:19 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * bin/dcps_tests.lst:
        * tests/DCPS/FooTest5/common.h:
        * tests/DCPS/FooTest5/common.cpp:
        * tests/DCPS/FooTest5/subscriber.cpp:

          The alternate perl script (see below) only enabled a small section
          of BIT testing code, and those are tested elsewhere.  Removed.

        * tests/DCPS/FooTest5/run_test_multi_trans.pl:

          Removed this file.

Mon Feb  6 23:04:42 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * tests/DCPS/CompatibilityTest/publisher.cpp:
        * tests/DCPS/CompatibilityTest/subscriber.cpp:
        * tests/DCPS/SetQosPartition/SetQosPartition.mpc:
        * tests/DCPS/SetQosPartition/publisher.cpp:
        * tests/DCPS/SetQosPartition/subscriber.cpp:
        * tests/DCPS/SharedTransport/TestCase.cpp:

          Set up tests for static builds to use RTPS Discovery.

Mon Feb  6 22:18:20 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * tests/DCPS/ContentFilteredTopic/rtps_disc.ini:
        * tests/DCPS/DcpsIntegration/rtps_disc.ini:
        * tests/DCPS/Messenger/rtps_disc.ini:
        * tests/DCPS/SetQosPartition/rtps_disc.ini:

          Set use_multicast=0 for some RTPS Udp Transport test config files.

Mon Feb  6 20:33:21 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/RTPS/Sedp.h:
        * dds/DCPS/RTPS/Sedp.cpp:

          Renamed need_default_locators_ to defer_match_endpoints_.
          Added associated_participants_, tracking which discovered
          participants have completed the SEDP Association phase.
          If trying to match against a remote participant's reader or writer
          and that participant hasn't yet completed SEDP Association, put it
          on the defer_match_endpoints_ list and try again once it has
          completed.

        * dds/DCPS/transport/framework/DataLink.h:
        * dds/DCPS/transport/framework/DataLink.inl:
        * dds/DCPS/transport/framework/DataLink.cpp:
