@@ -200,13 +200,13 @@ int ACE_TMAIN (int argc, ACE_TCHAR *argv[])
         dpf->delete_participant(participant.in ());
       }
 
-      TheServiceParticipant->shutdown ();
     }
   catch (CORBA::Exception& e)
     {
       cerr << "SUB: Exception caught in main ():" << endl << e << endl;
       return 1;
     }
+  TheServiceParticipant->shutdown ();
 
   return 0;
 }
