@@ -1,3 +1,12 @@
+Tue Feb  7 21:43:20 UTC 2012  jeff  <jeff@ociweb.com>
+
+        * tests/DCPS/SetQosDeadline/publisher.cpp:
+        * tests/DCPS/SetQosDeadline/subscriber.cpp:
+        * tests/DCPS/SetQosPartition/publisher.cpp:
+        * tests/DCPS/SetQosPartition/subscriber.cpp:
+
+          Shutdown service participant after all entities have been dereferenced.
+
 Tue Feb  7 16:24:19 UTC 2012  Adam Mitz  <mitza@ociweb.com>
 
         * bin/dcps_tests.lst:
